--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: ruby
 rvm:
         - 2.5.3
+
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
