--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,45 @@
+# replace with version(s) of Ruby that matches your Gemfile:
 language: ruby
 rvm:
-        - 2.5.3
-cache:
-        bundler: true
+  - 2.5.3
 
-addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+# make sure production-only gems are not installed
+bundler_args: --without production
 
 env:
-        global:
-                5384c291ae5ce890f2e486a4c919bdf36d0cc49feeb6e58c71203140b8ed80f4
+  global:
+    # in TravisCI settings, set CCKEY to your CodeClimate Test Reporter ID:
+    - CC_TEST_REPORTER_ID=$CCKEY
+    - CCTR=./cc-test-reporter
+    # set to whatever timezone your app assumes from this list:
+    # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+    - TZ=America/Los_Angeles
 
-before_install:
-        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        - chmod +x ./cc-test-reporter
-
-install:
-        - bundle install --without production --path=${BUNDLE_PATH:-vendor/bundle}
-
-before_script: bundle exec rake db:create db:migrate
+# steps to run BEFORE the test run
+before_script:
+  # create config/application.yml (sensitive API keys etc) from config/application.yml.asc
+  # IMPORTANT: you must MANUALLY set correct value of encryption KEY in Travis settings for your project --
+  # DO NOT expose that value here!
+  - gpg --passphrase $KEY -d -o config/application.yml config/application.yml.asc
+  # install CodeClimate test reporter and tell it we are starting a test run
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > $CCTR
+  - chmod +x $CCTR
+  - $CCTR before-build
 
 script:
-        - bundle exec rspec
-        - bundle exec rake
+  # setup the test database, including any seed data
+  - bundle exec rake db:setup
+  # insert here any other steps needed (load other sample data, etc) before starting tests 
+  # run RSpec tests, and capture coverage
+  - bundle exec rspec
+  - $CCTR format-coverage --output coverage/codeclimate.$SUITE.json
+  # run Cucumber scenarios, and capture coverage. --strict means undefined steps result in a failure.
+  - bundle exec cucumber --strict
+  - $CCTR format-coverage --output coverage/codeclimate.$SUITE.json
 
 after_script:
-        - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json # Format backend coverage
-        - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info  # Format frontend coverage
-        - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2                  # Sum both coverage parts into coverage/codeclimate.json
-        - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi  # Upload coverage/codeclimate.json
+  # combine coverage from all suites, and upload to CodeClimate
+  - $CCTR sum-coverage coverage/codeclimate.*.json | $CCTR upload-coverage
+  - $CCTR after-build --exit-code $TRAVIS_TEST_RESULT
+  # just in case, be paranoid and remove sensitive config info file
+  - rm -f config/application.yml
